new post pesticide

--- a/_posts/2015-09-21-default.md
+++ b/_posts/2015-09-21-default.md
@@ -138,4 +138,5 @@ Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur e
 
 -----
 
-Want to see something else added? <a href="https://github.com/poole/poole/issues/new">Open an issue.</a>
+Want to see something else added? <a href="mailto:colleowino@gmail.com?Subject=Hello">email me</a>
+
