added tags and categories to default post

--- a/_posts/2015-09-21-default.md
+++ b/_posts/2015-09-21-default.md
@@ -2,14 +2,13 @@
 layout:     post
 title:      "default post format"
 date:       2015-09-19 18:45:00
+tags: html css javascript browser-addon newbie
+categories: web
 author:     "colleowino"
+excerpt: This is actually a cross posted blog post I had written on Moringa school's <a href=https://moringaschool.wordpress.com/2015/05/13/html-css-and-pesticide/>blog</a> targeted at those who are curious about how web pages work but had never really the gone far in their quest. 
 published: false
+
 ---
-
-
-<div class="message">
-  Howdy! This is an example blog post that shows several types of HTML content supported in this theme.
-</div>
 
 Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. *Aenean eu leo quam.* Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.
 
