--- a/_drafts/2015-10-05-default.md
+++ b/_drafts/2015-10-05-default.md
@@ -6,6 +6,7 @@ tags: html css javascript browser-addon newbie
 categories: web
 author:     "colleowino"
 excerpt: This is actually a cross posted blog post I had written on Moringa school's <a href=https://moringaschool.wordpress.com/2015/05/13/html-css-and-pesticide/>blog</a> targeted at those who are curious about how web pages work but had never really the gone far in their quest. 
+published: false
 
 ---
 
