new vi-nature link

--- a/_posts/2016-02-17-vim-hacks.md
+++ b/_posts/2016-02-17-vim-hacks.md
@@ -55,6 +55,7 @@ Its a fast, as-you-type, fuzzy-search code completion engine for Vim.
 1. [all the right moves](http://vim.wikia.com/wiki/All_the_right_moves)
 2. [vim wikia](http://vim.wikia.com/wiki/Vim_Tips_Wiki)
 2. [vim casts](http://vimcasts.org/)
+2. [getting other editors to act like vim](http://bilalquadri.com/blog/2014/03/02/harmonizing-with-vi-nature/#sublime)
 2. [best vim navigation tutorial](http://www.thegeekstuff.com/2009/03/8-essential-vim-editor-navigation-fundamentals/)
 2. [usevim](http://usevim.com/)
 2. [vim as IDE](http://yannesposito.com/Scratch/en/blog/Vim-as-IDE/)
