new vim-hack link

--- a/_posts/2016-02-17-vim-hacks.md
+++ b/_posts/2016-02-17-vim-hacks.md
@@ -57,6 +57,7 @@ Its a fast, as-you-type, fuzzy-search code completion engine for Vim.
 2. [vim casts](http://vimcasts.org/)
 2. [getting other editors to act like vim](http://bilalquadri.com/blog/2014/03/02/harmonizing-with-vi-nature/#sublime)
 2. [best vim navigation tutorial](http://www.thegeekstuff.com/2009/03/8-essential-vim-editor-navigation-fundamentals/)
+2. [writing-my-own-vim-plugin-manager](http://junegunn.kr/2013/09/writing-my-own-vim-plugin-manager/)
 2. [usevim](http://usevim.com/)
 2. [vim as IDE](http://yannesposito.com/Scratch/en/blog/Vim-as-IDE/)
 2. [lococast vim](http://lococast.net/archives/tag/vim)
