add vim-hack link

--- a/_posts/2016-02-17-vim-hacks.md
+++ b/_posts/2016-02-17-vim-hacks.md
@@ -52,6 +52,7 @@ Its a fast, as-you-type, fuzzy-search code completion engine for Vim.
 
 ### More reading
 2. The best article so far on vim [learn vim progressivley](http://yannesposito.com/Scratch/en/blog/Learn-Vim-Progressively/)
+2. [basic vim tips](http://bencrowder.net/files/vim-fu/)
 1. [all the right moves](http://vim.wikia.com/wiki/All_the_right_moves)
 2. [vim wikia](http://vim.wikia.com/wiki/Vim_Tips_Wiki)
 2. [vim casts](http://vimcasts.org/)
