update golang make permanent

--- a/_posts/2017-05-25-golang.md
+++ b/_posts/2017-05-25-golang.md
@@ -31,7 +31,7 @@ Just like installing ruby using rbenv, the install is a pain in terms of time. I
 
 ##### If all went well. ![go installed](/img/go-installed.png "terminal output after installing go ")
 
-set it as default `gvm use go1.8`
+set it as default `gvm use go1.8 --default `
 
 ##### Test it out 
 
