update execute go

--- a/_posts/2017-05-25-golang.md
+++ b/_posts/2017-05-25-golang.md
@@ -51,6 +51,8 @@ func main() {
 
 {% endhighlight %}
 
+then execute it `go run hello.go`
+
 links:
 * [install go lang from source](https://golang.org/doc/install/source)
 * [7 Easy steps to install Go (golang) on ubuntu](http://www.hostingadvice.com/how-to/install-golang-on-ubuntu/)
